[package]
name = "relaunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
sysinfo = "0.24.7"


[dependencies.windows]
version = "0.38.0"
features = [
    "Win32_Foundation",
]
